# ZarzadzanieKioskami

./: .dockerignore  CHANGELOG_LIBREELEC.md  DOKUMENTACJA_KIOSK_RP4_RP5.md  Dockerfile  INSTRUKCJA_WDROZENIA.md  README.md  autostart.sh  docker-compose.yml  ipdoapi.py  start_app kopia.sh  start_app.sh  storage_orientation.txt  update_ssh_to_root.py
Do Kiosku/: instalator_libreelec.sh
Pliki testowe/: PODSUMOWANIE.md  README.md  UPRAWNIENIA.md  requirements.txt  start_app Online_Offline.sh  start_app wersja OFFLINE.sh  start_app.sh  start_app.sh kopia  tekstWyswietlany kopia  tekstWyswietlany.sh
Pliki testowe/kodi_ticker_addon/: README.txt  addon.xml  service.py
backend/: app.py  db_config.py  manage.py  migrate_passwords.py  package-lock.json  requirements.txt  run_migration.py  sftp_handler.py
backend/kiosk_platform/: asgi.py  settings.py  urls.py  wsgi.py
backend/ssh_keys/: kiosk_id_rsa
backend/tests/: test_backend_endpoints.py
database/: kiosks.db  migration_add_user_roles.sql  migration_libreelec.sql  migration_ssh_username.sql  schema.sql
docs/: Dokumentacja Kiosk.md  LIBREELEC_QUICKSTART.md  LibreELEC_Konfiguracja.md  start_app_Online_Offline_ENTERPRISE.md
frontend/: index.html  indexKiosk.html
frontend/css/: login.css  ssh-styles.css  style.css  users-modal.css
frontend/js/: api.js  config.js  login.js  main.js  playlist.js  reservations.js  users.js  users_old.js
kiosk rp4/: CMakeLists.txt  README.md
kiosk rp4/scripts/: compare_performance.py  convert_for_rpi.sh  convert_picture.sh  convert_video.sh  (+5 more)
kiosk rp5/: CMakeLists.txt  README.md  playlist.m3u
kiosk rp5/scripts/: convert_for_rpi.sh  convert_picture.sh  install_deps_raspberry.sh  run_video_player.sh
kiosk rp5/src/: VideoPlayer.h  main.cpp
kiosk rp5/src/core/: Renderer.cpp  VideoDecoder.h  WebSocketController.cpp
kiosk rp5/src/utils/: Logger.cpp  Logger.h  ScrollingTextBar.cpp
kodi_ticker_addon/: INSTALACJA.md
my-app/: .env  .gitignore  API_DOCUMENTATION.md  INTEGRATION_CHECKLIST.md  README_API_LAYER.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
(+75 files in other folders)
